[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/screens/play_screen/PlayScreen.gd" type="Script" id=1]
[ext_resource path="res://src/ui/piecepreview/PiecePreview.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/holdpiece/HoldPieceView.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game_objects/playgrid/PlayGrid.tscn" type="PackedScene" id=4]

[node name="Playscreen" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayGrid" parent="." instance=ExtResource( 4 )]
position = Vector2( 390, -30 )

[node name="UI" type="Control" parent="."]
margin_left = 510.0
margin_top = 330.0
margin_right = 510.0
margin_bottom = 330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreData" type="PanelContainer" parent="UI"]
anchor_left = -0.263
anchor_top = 0.6
anchor_right = -0.117
anchor_bottom = 0.9
margin_left = 273.0
margin_top = -270.0
margin_right = 453.0
margin_bottom = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScoreData"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 173.0

[node name="Label" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_right = 166.0
margin_bottom = 14.0
text = "Score"

[node name="Lbl2" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_top = 18.0
margin_right = 166.0
margin_bottom = 32.0
text = "Score value"

[node name="Lbl3" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_top = 36.0
margin_right = 166.0
margin_bottom = 50.0
text = "Level"

[node name="Lbl4" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_top = 54.0
margin_right = 166.0
margin_bottom = 68.0
text = "Level num"

[node name="Lbl5" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_top = 72.0
margin_right = 166.0
margin_bottom = 86.0
text = "Lines"

[node name="Lbl6" type="Label" parent="UI/ScoreData/VBoxContainer"]
margin_top = 90.0
margin_right = 166.0
margin_bottom = 104.0
text = "Line count"

[node name="HoldPieceView" parent="UI" instance=ExtResource( 3 )]
margin_left = -390.0
margin_top = -270.0
margin_right = -210.0
margin_bottom = -120.0

[node name="PiecePreview" parent="UI" instance=ExtResource( 2 )]
margin_left = -390.0
margin_top = -60.0
margin_right = -210.0
margin_bottom = 270.0
